// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Small checkGrammar=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkGrammar=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkHighlight=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkHighlight=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkSpaces=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkSpaces=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small className="my-classname" 1`] = `
<small
  className="uu5-bricks-small my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small content="This is Content from ContentMixin" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</small>
`;

exports[`UU5.Bricks.Small content=12345 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</small>
`;

exports[`UU5.Bricks.Small controlled=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small controlled=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small default props 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small disabled=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small disabled=true 1`] = `
<small
  className="uu5-bricks-small uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</small>
`;

exports[`UU5.Bricks.Small docKit examples UU5.Bricks.Small should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <P
    content="This is main text with normal size"
    id="uuID2"
    key="uuID2"
  />
   
  <P
    id="uuID3"
    key="uuID3"
  >
    <Small
      id="uuID4"
    >
      This is smaller text
    </Small>
  </P>
</div>
`;

exports[`UU5.Bricks.Small dynamic=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small dynamic=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small hidden=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small hidden=true 1`] = `
<small
  className="uu5-bricks-small uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small id="myId" 1`] = `
<small
  className="uu5-bricks-small"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small ignoreHTML=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small ignoreHTML=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small mainAttrs=undefined 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small name="myName" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small noIndex=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small noIndex=true 1`] = `
<small
  className="uu5-bricks-small uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small selected=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small selected=true 1`] = `
<small
  className="uu5-bricks-small uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small style="padding:8px; borderRadius: 2px" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Small style={"backgroundColor":"red","color":"blue"} 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Small textCorrector=false 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small textCorrector=true 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small tooltip="My Tooltip" 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
